[package]
name = "teximage2d"
version = "0.1.1"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
description = "A library for working with graphics textures and compile-time binary embedding."


[dependencies]
texture = { path = "texture/" }
texture_gen = { path = "texture_gen/" }


[build-dependencies]
texture = { path = "texture/" }
texture_gen = { path = "texture_gen/" }

